added PTA construction and all things necessary for that